added dataagregator, fixes

--- a/ORMPerf/ORMPerf.csproj
+++ b/ORMPerf/ORMPerf.csproj
@@ -6,6 +6,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <None Remove="Benchmark.cs~RF1754d9c.TMP" />
+    </ItemGroup>
+
+    <ItemGroup>
       <ProjectReference Include="..\ORMPerf.Core\ORMPerf.Core.csproj" />
     </ItemGroup>
 
